--- a/src/reset.css
+++ b/src/reset.css
@@ -124,3 +124,11 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+html,
+body,
+#app {
+  height: 100%;
+}
+a {
+  text-decoration: none;
+}
